--- a/css/login.css
+++ b/css/login.css
@@ -1,1 +1,8 @@
-.browsersTable img{width:90px;height:90px}.browsersTable td{text-align:center}.browsersTable a{}
+.browsersTable img {
+    width: 90px;
+    height: 90px
+}
+
+.browsersTable td {
+    text-align: center
+}
