--- a/css/shared.css
+++ b/css/shared.css
@@ -13030,7 +13030,7 @@ ul.copy-move-tree>li:not(.ignore-tree-icon)>div>span>a i:after {
 }
 
 .modal-backdrop {
-    background-color: #000
+    background-color: #0000008f
 }
 
 .fa,
