--- a/css/shared.css
+++ b/css/shared.css
@@ -13642,8 +13642,13 @@ iframe {
     padding: 10px;
 }
 
+@media only screen and (max-width: 500px) {
+    .horizontal-scroll {
+        display: inline-block;
+    }
+}
+
 .horizontal-scroll {
-    display: inline-block;
     overflow-x: scroll;
     white-space: nowrap;
 }
